[tool.poetry]
name = "nexus-analyzer"
version = "0.1.0"
description = "Sales-Tax nexus detection tool"
authors = ["Mark Miedema <markmiedema.career@gmail.com>"]
license = "MIT"
readme = "README.md"
# homepage = "..."
# repository = "..."
# keywords = ["tax", "nexus", "cli"]

[tool.poetry.dependencies]
python = ">=3.13"
typer = {version = ">=0.16.0,<0.17.0"} # Example if you add specific versioning
pandas = {version = ">=2.2.3,<3.0.0"}
# ... other dependencies ...

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
nexus-analyzer = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"