[tool.poetry]
name = "nexus-analyzer"
version = "0.1.0"
description = "Sales tax nexus detection tool"
authors = ["Mark Miedema <markmiedema.career@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Changed from >=3.13 to ^3.10 for better compatibility
pandas = "^2.2.3"
pydantic = "^2.11.5"
pyyaml = "^6.0"
openpyxl = "^3.1.5"
click = "^8.1.7"  # Add missing dependency
rich = "^13.7.0"   # Add missing dependency
typer = {version = "^0.16.0", optional = true}  # Make optional if not using

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
nexus-analyzer = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"